Fix About Us heading alignment

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ padding: 30px 0 350px 0;
   margin-top: 25px;
 }
 
+.fh5co-about-us .about-quote h2 {
+  margin-top: 0;
+}
+
 .fh5co-about-us .about-quote p {
   margin-bottom: 0;
 }
